--- a/HW-2/index.html
+++ b/HW-2/index.html
@@ -1,6 +1,9 @@
 <html>
   <head>
+    <title>MART 220 Homework 2</title>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
+    <script src="libs/p5.min.js"></script>
     <script src="sketch.js"></script>
   </head>
   <body>
