--- a/HW-2/index.html
+++ b/HW-2/index.html
@@ -5,7 +5,7 @@
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>-->
 
     <script src="libs/p5.min.js"></script>
-    <script src="js/sketch.js"></script>
+    <script src="./js/sketch.js"></script>
   </head>
   <body>
   </body>
