--- a/HW-2/index.html
+++ b/HW-2/index.html
@@ -2,10 +2,13 @@
   <head>
     <title> Homework 2</title>
 
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
 
-    <script src="libs/p5.min.js"></script>
+  <!--<script src="libs/p5.min.js"></script> -->
+
     <script src="./js/sketch.js"></script>
+
+
   </head>
   <body>
   </body>
