--- a/HW-4/index.html
+++ b/HW-4/index.html
@@ -7,6 +7,7 @@
   <!--<script src="libs/p5.min.js"></script> -->
 
     <script src="./js/sketch.js"></script>
+    <script src="./js/starclass.js"></script>
 
 
   </head>
