--- a/HW-5/index.html
+++ b/HW-5/index.html
@@ -6,6 +6,8 @@
 
   <!--<script src="libs/p5.min.js"></script> -->
 
+    <script src="./libs/p5.play.js"></script>
+
     <script src="./js/sketch.js"></script>
     <script src="./js/starclass.js"></script>
 
