--- a/HW-5/index.html
+++ b/HW-5/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title> Homework 5</title>
+    <title> Homework 5 & 6</title>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
 
