--- a/HW-8/index.html
+++ b/HW-8/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title> Homework 5</title>
+    <title> Homework 8</title>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
 
@@ -10,6 +10,7 @@
 
     <script src="./js/sketch.js"></script>
     <script src="./js/starclass.js"></script>
+    <script src="./js/particleclass.js"></script>
 
 
   </head>
