--- a/HW-9/index.html
+++ b/HW-9/index.html
@@ -11,6 +11,7 @@
     <script src="./js/sketch.js"></script>
     <script src="./js/starclass.js"></script>
     <script src="./js/particleclass.js"></script>
+    <script src="./js/planetclass.js"></script>
 
 
   </head>
