--- a/HW-11/index.html
+++ b/HW-11/index.html
@@ -9,8 +9,8 @@
     <script src="./libs/p5.play.js"></script>
 
     <script src="./js/sketch.js"></script>
-    <script src="./js/starclass.js"></script>
-    <script src="./js/particleclass.js"></script>
+    <!--<script src="./js/starclass.js"></script>-->
+    <!--<script src="./js/particleclass.js"></script>-->
 
 
   </head>
