--- a/HW-15/index.html
+++ b/HW-15/index.html
@@ -9,7 +9,8 @@
     <script src="./libs/p5.play.js"></script>
 
     <script src="./js/sketch.js"></script>
-  
+    <script src="./js/secondsketch.js"></script>
+
 
 
   </head>
